--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="no_items_found">No items found</string>
     <string name="temp_format">%.1f° C</string>
     <string name="icon_url_format">http://openweathermap.org/img/wn/%s@2x.png</string>
+    <string name="no_internet_connection">No internet connection</string>
 </resources>
