--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="icon_url_format">http://openweathermap.org/img/wn/%s@2x.png</string>
     <string name="no_internet_connection">No internet connection</string>
     <string name="not_in_a_city">Not in a city</string>
+    <string name="location_permission_dialog_title">Permission needed</string>
+    <string name="location_permission_dialog_message">You need location permission to use all the features in this app</string>
 </resources>
